# ml-predict

./: ACKNOWLEDGEMENTS.md  LICENSE  README.md  experiment_config.yaml  experiment_config_email.yaml  experiment_config_email_100.yaml  experiment_config_email_100_1traits.yaml  experiment_config_email_100_2traits.yaml  experiment_config_email_100_3traits.yaml  experiment_config_email_100_4traits.yaml  experiment_config_summ_100.yaml  experiment_config_summ_100_1traits.yaml  experiment_config_summ_100_2traits.yaml  experiment_config_summ_100_3traits.yaml  experiment_config_summ_100_4traits.yaml  prose_vocabulary_constraint.py  pyproject.toml
preference_inferrer/: __init__.py
preference_inferrer/common/: __init__.py  configurations.py  personal_keys_template.py  utils.py
preference_inferrer/llms/: __init__.py  base_llm.py  openai_gpt.py  qwen2_5.py  test_llm.py
preference_inferrer/preference_conditioned_agents/: __init__.py  abstract_preference_conditioned_agent.py  preference_conditioned_writing_agent.py
preference_inferrer/preference_inferring_agents/: __init__.py  abstract_agent.py  cipher.py  example_retriever.py  in_context_learning.py  no_learning.py  oracle_preference.py  prose.py  single_preference.py
preference_inferrer/preference_sets/: __init__.py  abstract_preference_set.py  writing_preference_set.py
preference_inferrer/prompt_templates/: __init__.py  abstract_templates.py  plume_templates.py  prelude_templates.py
preference_inferrer/tasks/: task.py  (+4 more)
scripts/: compare_frameworks.py  print_prompts.py  run_all_experiments.py  run_single_experiment.py
(+10 files in other folders)
