#
# Copyright (C) 2025 Apple Inc. All rights reserved.
#

# Tell pip to use flit to build this pacakge
[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "preference_inferrer"
author = "Stéphane Aroca-Ouellette"
author-email = "s_arocaouellette@apple.com"

license = "Apple Internal"
requires-python = ">=3.9"
description-file="README.md"

# List here all your dependencies
requires = [
    "torch>=2.3.0",
    "transformers",
    "datasets==2.20.0",
    "bitsandbytes==0.42.0",
    "matplotlib",
    "evaluate==0.4.3",
    "bert_score==0.3.13",
    "openai==1.3.9",
    "editdistance==0.8.1",
    "nltk==3.9.1",
    "scikit-learn==1.5.2",
    "pandas",
    "gym==0.26.2",
    "gymnasium==0.29.1",
    "huggingface_hub==0.25.0",
    "accelerate",
    "wandb"
]

[tool.flit.metadata.requires-extra]
# Packages required for testing
test = [
    "pytest",
    "pytest-mypy",
    "pytest-flake8",
    "pytest-cov",
    "flake8-docstrings",
    "flake8-copyright",
]
# Packages required to build the documentation
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "m2r2"
]

[tool.flit.scripts]
# Register your scripts here (feel free to rename the sample script)
interactive_alignment_script = "preference_inferrer.scripts.run_single_experimemt:main"
